...
    "A new version of %@ is available. Please update to continue using the app." : {

    },
    "About this Analysis" : {

    },
    "Add Baby" : {
      "comment" : "A button that lets the user add a new baby.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
...
      }
    },
    "All Babies" : {
      "comment" : "A default option in the \"Baby\" picker, representing all babies.",
      "isCommentAutoGenerated" : true
    },
    "Amount" : {
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "수유량"
          }
...
      }
    },
    "An event type with emoji %@ already exists. Please choose a different emoji." : {
      "comment" : "Error message when a user tries to create an event type with a duplicate emoji. The argument is the emoji that was used.",
      "isCommentAutoGenerated" : true
    },
    "Analysis" : {
      "comment" : "The title of the view.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
...
      "isCommentAutoGenerated" : true
    },
    "Choose how long between feeds to use for progress and warnings." : {
      "comment" : "A footnote explaining the purpose of the feeding interval stepper.",
      "isCommentAutoGenerated" : true
    },
    "Configure Daily Checklist" : {
      "comment" : "A button that allows the user to configure the daily checklist.",
      "isCommentAutoGenerated" : true
    },
    "Correlation" : {
      "comment" : "A button label that navigates to the correlation analysis view.",
      "isCommentAutoGenerated" : true,
...
      "isCommentAutoGenerated" : true
    },
    "Custom Event Type" : {
      "comment" : "Type of entity representing a custom event type.",
      "isCommentAutoGenerated" : true
    },
    "Custom Event Types" : {
      "comment" : "The title of a view that lists custom event types.",
      "isCommentAutoGenerated" : true
    },
    "Custom events let you track any activity for baby" : {
      "comment" : "A description of what custom events are.",
      "isCommentAutoGenerated" : true
...
            "state" : "translated",
            "value" : "일간"
          }
        }
      }
    },
    "Daily Checklist" : {
      "comment" : "The title of a screen where a user can configure their daily checklist.",
      "isCommentAutoGenerated" : true
    },
    "Daily Summaries" : {
      "comment" : "A section header in the settings view.",
      "isCommentAutoGenerated" : true,
...
      "isCommentAutoGenerated" : true
    },
    "Do you want to cancel this Feed Session?" : {
      "comment" : "A confirmation dialog asking the user if they want to cancel a feed session.",
      "isCommentAutoGenerated" : true
    },
    "Done" : {
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "완료"
          }
...
      "isCommentAutoGenerated" : true
    },
    "Edit Details" : {
      "comment" : "An action name that can be triggered by a user to edit details related to a status card.",
      "isCommentAutoGenerated" : true
    },
    "Edit Event" : {
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "이벤트 편집"
          }
...
        }
      }
    },
    "Hashtags" : {

    },
    "History" : {
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "이력"
          }
...
      }
    },
    "Last Session summary" : {
      "comment" : "An accessibility label for the last session summary text in the status card.",
      "isCommentAutoGenerated" : true
    },
    "Log" : {
      "comment" : "A button label that logs a feeding.",
      "isCommentAutoGenerated" : true
    },
    "Log Custom Event" : {
      "comment" : "Title of the intent that logs a custom event.",
      "isCommentAutoGenerated" : true
...
            "state" : "translated",
            "value" : "모드"
          }
        }
      }
    },
    "Name" : {
      "comment" : "A label for the name field in the baby form.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
...
      "isCommentAutoGenerated" : true
    },
    "Opens the App Store to update %@" : {
      "comment" : "An accessibility hint that appears when a user hovers over the \"Update Now\" button. It instructs the user to tap the button to open the App Store and update the app.",
      "isCommentAutoGenerated" : true
    },
    "Pee" : {
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "오줌"
          }
...
            "state" : "translated",
            "value" : "마지막 기저귀 갈이를 기록합니다."
          }
        }
      }
    },
    "Remove from checklist" : {
      "comment" : "A label for removing an item from a checklist.",
      "isCommentAutoGenerated" : true
    },
    "Save" : {
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "저장"
          }
...
            "state" : "translated",
            "value" : "하루의 시작"
          }
        }
      }
    },
    "Start Time" : {
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "시작 시간"
          }
...
            "state" : "translated",
            "value" : "아기의 수유세션을 시작합니다."
          }
        }
      }
    },
    "Tap to add emoji" : {
      "comment" : "A prompt for the user to tap to add an emoji to a text field.",
      "isCommentAutoGenerated" : true
    },
    "Tap to edit emoji" : {
      "comment" : "A prompt for the user to tap to edit the emoji for an event type.",
      "isCommentAutoGenerated" : true
...
